--- a/Lesson24/dz24_2.ipynb
+++ b/Lesson24/dz24_2.ipynb
@@ -73,7 +73,7 @@
    "id": "28363682",
    "metadata": {},
    "source": [
-    "$ \\sigma(X) = \\sqrt{D(X)} $"
+    "$ \\sigma_x = \\sqrt{D(X)} $"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "id": "22421a50",
    "metadata": {},
    "source": [
-    "$ \\sigma(Y) = \\sqrt{D(Y)} $, де"
+    "$ \\sigma_y = \\sqrt{D(Y)} $, де"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "id": "fe55272e",
    "metadata": {},
    "source": [
-    "$ \\sigma(X) = \\sqrt{D(152500)} = 390,5 $"
+    "$ \\sigma_x = \\sqrt{D(152500)} = 390,5 $"
    ]
   },
   {
@@ -243,7 +243,7 @@
    "id": "bb447961",
    "metadata": {},
    "source": [
-    "$ \\sigma(Y = \\sqrt{D(90000)} = 300 $"
+    "$ \\sigma_y = \\sqrt{D(90000)} = 300 $"
    ]
   },
   {
